--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,16 +1,18 @@
 server.port=8288
+server.servlet.context-path=/
 
 #logger conf
 #logging.file.path=D://log
 #logging.file.name=openapi.log
 #logging.file.max-history=3
 
-
 #db info
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://10.168.100.142:3306/openapi?characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=t4ow3_Ytr)bo-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 #db proxool
 spring.datasource.initialSize=60
 spring.datasource.minIdle=50
@@ -26,11 +28,11 @@ spring.datasource.poolPreparedStatements=false
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 
 #jpa conf
-hibernate.dialect.storage_engine=innodb
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#hibernate.dialect.storage_engine=innodb
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.open-in-view=false
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 
 
 #redis conf
