--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
 			<version>1.1.19</version>
 		</dependency>
 
+		<!-- mybatis-plus -->
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<version>3.1.2</version>
+		</dependency>
+
 		<!-- redis-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
