--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,11 +7,12 @@ server.servlet.context-path=/
 #logging.file.max-history=3
 
 #db info
+spring.datasource.platform=mysql
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://10.168.100.142:3306/openapi?characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/openapi?characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=t4ow3_Ytr)bo-
+spring.datasource.password=root
 
 #db proxool
 spring.datasource.initialSize=60
